styles.css
@font-face {
  font-family: 'PPNikkeiMaru-Light';
  src: url('fonts/PPNikkeiMaru-Light.otf') format('opentype');
}

@font-face {
  font-family: 'PPNikkeiMaru-LightItalic';
  src: url('fonts/PPNikkeiMaru-LightItalic.otf') format('opentype');
}

@font-face {
  font-family: 'PPNikkeiMaru';
  src: url('fonts/PPNikkeiMaru-Regular.otf') format('opentype');
}

@font-face {
  font-family: 'PPNikkeiMaru-Italic';
  src: url('fonts/PPNikkeiMaru-RegularItalic.otf') format('opentype');
}

@font-face {
  font-family: 'PPNikkeiMaru-Ultrabold';
  src: url('fonts/PPNikkeiMaru-Ultrabold.otf') format('opentype');
}

@font-face {
  font-family: 'PPNikkeiMaru-UltraboldItalic';
  src: url('fonts/PPNikkeiMaru-UltraboldItalic.otf') format('opentype');
}

* { 
  font-family: 'PPNikkeiMaru-Light';
  color: #2D2926;
  font-size: 20px;
}

body, .content{
  width: 90%;
  height: 80vh;
  margin-right: auto;
  margin-left: auto;
}

.bold {
  font-family: 'DM Sans', sans-serif;
  font-weight: 700;
}

.text-center {
  text-align: center;
}

h1 {
  font-size: 56px;
  font-weight: 900;
  text-align: left;
  margin-bottom: -20px;
}

h2{
  font-size: 32px;
  font-weight: 700; 
  text-align: left;
}

.h2-unbold {
  font-family: 'DM Sans', sans-serif;
  font-weight: 300;
  font-size: 32px;
}

h4{
  font-family: 'DM Sans', sans-serif;
  font-weight: 700;
  font-size: 40px;
  margin-bottom: 12px;
}

.definition {
  font-family: 'DM Sans', sans-serif;
  font-weight: 300;
  font-size: 24px;
}

/* -------------------------------------------------------------------------- */
/* FOOTER STYLING */
/* -------------------------------------------------------------------------- */

footer {
  width: 90%;
  margin-right: auto;
  margin-left: auto;
}

footer .nav-left, footer .nav-right {
  padding-top: 64px;
  padding-bottom: 64px;
}

footer p, footer a {
  font-family: 'PPNikkeiMaru-Light';
  color: #8091F8;
}

/* -------------------------------------------------------------------------- */
/* NAVBAR STYLING */
/* -------------------------------------------------------------------------- */
nav {
  height: 10vh;
  width: 90%;
  margin-right: auto;
  margin-left: auto;
}

.nav-left {
  float: left;
  width: 50%;
}

.nav-right {
  float: right;
  width: 50%;
}

.nav-right-item {
  padding-left: 36px;
  padding-top: 24px;
  padding-bottom: 24px;
  float: right;
  text-decoration: none;
}

.nav-left-item {
  padding-top: 24px;
  padding-bottom: 24px;
  float: left;
  text-decoration: none;
}

a.nav-item-right:link , a.nav-item-left:link {
  font-family: 'DM Sans', sans-serif;
  font-weight: 200;
  text-decoration: underline;
}

a.nav-item-right:hover , a.nav-item-left:hover {
  font-family: 'DM Sans', sans-serif;
  font-weight: 200;
  color: #8091F8;
  text-decoration: underline;
}

a.nav-item-right:hover , a.nav-item-left:hover {
  font-family: 'DM Sans', sans-serif;
  font-weight: 200;
  color: #8091F8;
  text-decoration: none;
}

/* -------------------------------------------------------------------------- */
/* HOMEPAGE- BIO STYLING */
/* -------------------------------------------------------------------------- */
#homepage p#intro {
  font-size: 40px;
}

.blue-text {
  color: #749BC7;
  font-size: inherit;
}

.yellow-highlight {
  font-size: inherit;
  text-align: left;
  position: relative;
  z-index: 1;
}

.yellow-highlight::after {
  font-size: inherit;
  text-align: left;
  content: "";
  position: absolute;
  left: 0;
  bottom: 8px;
  width: 100%;
  height: 24px;
  background-color: #E5E75D;
  z-index: -1;
}

.red-underline {
  font-size: inherit;
  text-align: left;
  position: relative;
  z-index: 1;
}

.red-underline::after {
  font-size: inherit;
  text-align: left;
  content: "";
  position: absolute;
  left: 0;
  bottom: 2px;
  width: 100%;
  height: 2px;
  background-color: #E18674;
  z-index: -1;
}

/* -------------------------------------------------------------------------- */
/* HOMEPAGE- RECENT WORK STYLING */
/* -------------------------------------------------------------------------- */

div.grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 10px;
}

.grid-item {
  padding-left: 24px;
  padding-bottom: 64px;
  text-align: center;
  height: 500px;
  transition: transform 0.3s ease-in-out;
}

.grid-item:hover {
  transform: translateX(16px) translateY(16px);
}

.grid-item div.thumbnail-container {
  padding: 10px;
  text-align: center;
  position: relative;
}

div.thumbnail {
  width: 377px;
  position: absolute;
  top: 0;
}

div.front {
  width: 377px;
  height: 246px;
  background-color: white;
  outline: 2px black solid;
}

div.back h4, div.back p {
  color: white;
  margin-top: -4px;
}

#costar div.back {
  background-color: #0D3B72;
  top: 24px;
  left: 24px;
  text-align: center;
  padding-top: 254px;
  outline: 2px black solid;
}

#zoo div.back {
  background-color: #59B195;
  top: 24px;
  left: 24px;
  text-align: center;
  padding-top: 254px;
  outline: 2px black solid;
}

#archie div.back {
  background-color: #EB4C2E;
  top: 24px;
  left: 24px;
  text-align: center;
  padding-top: 254px;
  outline: 2px black solid;
}

#amazon div.back {
  background-color: #42C8CF;
  top: 24px;
  left: 24px;
  text-align: center;
  padding-top: 254px;
  outline: 2px black solid;
}

/* -------------------------------------------------------------------------- */
/* ABOUT PAGE STYLING */
/* -------------------------------------------------------------------------- */

#about-img img {
  width: 27.9%;
  height: auto;
  float: left;
}

#about-img,
#play-diving-img,
#play-photo-img, 
#play-swe-img {
  display: block;
  margin-top: 80px;
}


#play-diving-img img,
#play-photo-img img, 
#play-swe-img img {
  width: 27.9%;
  height: auto;
  float: left;
}

#about-text, 
#play-diving-text, 
#play-photo-text,
#play-swe-text {
  width: 65.9%;
  padding-left: 5%;
  float: left;
}

/* -------------------------------------------------------------------------- */
/* CASE STUDY STYLING */
/* -------------------------------------------------------------------------- */

.casestudy-title h2 {
  font-size: 48px;
  font-weight: 300;
  text-align: center;
}

#amazon-ul {
  font-size: 48px;
  font-weight: 900;
  text-align: center;
  position: relative;
  z-index: 1;
}

#amazon-ul::after {
  font-size: 48px;
  font-weight: 900;
  text-align: center;
  content: "";
  position: absolute;
  left: 0;
  bottom: 6px;
  width: 100%;
  height: 16px;
  background-color: #DD74F7;
  z-index: -1;
}

#costar-underline {
  font-size: 48px;
  text-align: center;
  position: relative;
  z-index: 1;
}

#costar-underline::after {
  font-size: 48px;
  text-align: center;
  content: "";
  position: absolute;
  left: 0;
  bottom: 10px;
  width: 100%;
  height: 16px;
  background-color: #E3F3FC;
  z-index: -1;
}

#zoo-underline {
  font-size: 48px;
  font-weight: 900;
  text-align: center;
  position: relative;
  z-index: 1;
}

#zoo-underline::after {
  font-size: 48px;
  font-weight: 900;
  content: "";
  position: absolute;
  left: 0;
  bottom: 10px;
  width: 100%;
  height: 16px;
  background-color: #B3CE7D;
  z-index: -1;
}

#cui-underline {
  font-size: 48px;
  font-weight: 900;
  text-align: center;
  position: relative;
  z-index: 1;
}

#cui-underline::after {
  font-size: 48px;
  font-weight: 900;
  text-align: center;
  content: "";
  position: absolute;
  left: 0;
  bottom: 10px;
  width: 100%;
  height: 16px;
  background-color: #ACADB1;
  z-index: -1;
}

p.homepage-subtitle {
  font-size: 28px;
  margin-top: -124px;
  color: black;
}

#homepage {
  margin-top: 128px;
}

.thumbnail-large {
  width: auto;
  height: 80%;
  padding-top: 24px;
  /* height: auto; */
}

.thumbnail-casestudy {
  height: 90vh;
  margin-left: auto;
  margin-right: auto;
}

.thumbnail-casestudy img {
  width: 100%;
  height: auto;
  padding-bottom: 64px;
  float: left;
}

.casestudy-content {
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  float: center;
}

.casestudy-component, 
.play-component {
  float: left;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.casestudy-component img,
.casestudy-component video {
  width: 50%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
} 

.casestudy-component img.full-size,
.casestudy-component .component-left video.full-size,
.casestudy-component .component-right video.full-size,
.component-4col video.full-size {
  width: 90%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
} 

.casestudy-component button {
  background-color: #DD74F7; /* Background color */
  color: black; /* Text color */
  padding: 10px 20px; /* Padding */
  border: 2px solid black; /* Remove border */
  border-radius: 8px; /* Rounded corners */
  cursor: pointer; /* Cursor style */
} 

.component-left{
  width: 44.9%;
  padding-right: 5%;
  float: left;
}
.component-right {
  width: 44.9%;
  padding-left: 5%;
  float: left;
}

.component-3col {
  float: left;
  width: 33.33%;
}

.component-3col p,
.component-4col p {
  text-align: center;
}

.component-4col {
  float: left;
  width: 25%;
}

.component-3col .component-text img {
  width: 90%;
  height: auto;
  display: block;
} 

.component-text {
  padding-left: 32px;
}

.img-center, 
.component-right video,
.component-left video,
.component-header video {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.component-header {
  font-size: 32px;
  margin-top: -6px;
}

.amazon-bold-color {
  font-weight: 700;
  color: #DD74F7;
}

.zoo-bold-color {
  font-weight: 700;
  color: #59B195;
}

.cui-bold-color {
  font-weight: 700;
  color: #EB4C2E;
}

.costar-bold-color {
  font-weight: 700;
  color: #0D3B72;
}

.img-caption {
  font-size: 14px;
}

.demo-container-left {
  width: 20%;
  float: left;
}

img#archie {
    width: 350px;
    height: 450px;
}

#grid-container {
  display: grid;
  grid-template-columns: auto auto;
  gap: 24px;
  padding: 24px;
  align-items: center;
}

.grid-container-play {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 24px;
}

